Create specific wallet for pool when new pool is created
