# swagger_output.json
@@ -222,6 +222,10 @@
         "target": {
           "type": "string",
           "example": "String"
+        },
+        "unit": {
+          "type": "string",
+          "example": "String"
         }
       },
       "xml": {
